--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-minify-html": "^1.0.6",
     "gulp-plumber": "^1.1.0",
+    "gulp-purifycss": "^0.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-uglify": "^2.1.2",
